infrastructure/conjur-oss/conjur-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  labels:
    app.kubernetes.io/component: conjur
    app.kubernetes.io/instance: conjur
    app.kubernetes.io/managed-by: self
    app.kubernetes.io/name: conjur
  name: conjur 
  namespace: conjur-project
spec:
  rules:
  - host: conjur.local
    http:
      paths:
      - backend:
          serviceName: conjur-oss-http
          servicePort: 80
  tls:
  - hosts:
    - conjur.local
    secretName: conjur-tls

status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.230
